<resources>
    <string name="app_name">StudyTime-4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_icon">home_icon</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="add_icon">add_icon</string>
    <string name="sessions">Sessions</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="progress">Progress</string>
    <string name="start_timer_button">Start</string>
    <string name="start_timer_button_pause">Pause</string>
    <string name="timer_text_reset">00:00:00</string>
    <string name="save_session_chip_text">save</string>
    <string name="reset_timer_button">reset</string>
    <string name="enter_study_duration">Enter hours to study</string>
    <string name="_0">0</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="cancel">cancel</string>
    <string name="monthly_goal">Monthly goal</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="s">S</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="study">Study</string>
</resources>