<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.goal.AddGoalFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutWeeklyGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weekly_goal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeeklyGoal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/save_session_chip_text"
        app:layout_constraintStart_toStartOf="@+id/etLayoutWeeklyGoal"
        app:layout_constraintTop_toBottomOf="@+id/etLayoutWeeklyGoal" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSaveGoal"
        app:layout_constraintEnd_toEndOf="@+id/etLayoutWeeklyGoal"
        app:layout_constraintStart_toEndOf="@+id/btnSaveGoal" />

</androidx.constraintlayout.widget.ConstraintLayout>